# screen-tricks

./: .gitignore  Cargo.toml  README.md  README_Version3.md  hack  hack.bat  hack.ps1  off.cpp  particles.cpp  shuffle.cpp  triangulate.cpp  wave.cpp
.github/workflows/: c-cpp.yml  release.yml
PARTICLES/: Cargo.toml
PARTICLES/src/: main.rs
PARTICLES/src/overlay/: canvas.rs  capture.rs  mod.rs  state.rs  text_engine.rs  ui.rs  win32.rs
PARTICLES/src/random/: mod.rs  random.rs
clinc/: Cargo.toml
clinc/src/: lib.rs
overlay/: Cargo.toml
overlay/examples/: simple_video_rect.rs
overlay/src/: canvas.rs  capture.rs  lib.rs  state.rs  text_engine.rs  ui.rs  win32.rs
overlay/src/image/: capture.rs  common.rs  frames.rs  mod.rs
particles/: Cargo.toml  READMEM.md
particles/src/: main.rs
random/: Cargo.toml
random/src/: random.rs
triangulate/: Cargo.toml  README.md
triangulate/src/: delaunay.rs  main.rs
wave/: Cargo.toml  README.md
wave/src/: main.rs
