[package]
name = "PARTICLES"
version = "0.1.0"
edition = "2026"

[dependencies]
font8x8 = "0.3"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_Console"] }
image = "0.25.10"
lexopt = "0.3.2"
