[package]
name = "overlay"
version = "0.1.0"
edition = "2024"

[lib]
name = "overlay"
path = "src/lib.rs"

[dependencies]
font8x8 = "0.3"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_Console"] }