[package]
name = "particles"
version = "0.1.0"
edition = "2024"

[dependencies]
overlay = {path = "../overlay"}
random = {path = "../random"}
lexopt = "0.3.2"

[[bin]]
name = "particles"
path = "src/main.rs"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false
